--- a/.github/workflows/cobrinha.yml
+++ b/.github/workflows/cobrinha.yml
@@ -12,10 +12,11 @@ jobs:
     steps:
       # Snake Animation
       - uses: Platane/snk@master
-        id: snake-gif
-        with:
-          github_user_name: brunossales
-          svg_out_path: dist/github-contribution-grid-snake.svg
+  with:
+    github_user_name: platane
+    gif_out_path: dist/github-contribution-grid-snake.gif
+    svg_out_path: dist/github-contribution-grid-snake.svg
+
 
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
