--- a/.github/workflows/cobrinha.yml
+++ b/.github/workflows/cobrinha.yml
@@ -1,26 +1,24 @@
-name: Generate Datas
+name: generate animation
 
 on:
-  schedule: # execute every 12 hours
-    - cron: "* */12 * * *"
-  workflow_dispatch:
+  schedule:
+    # every 6 hours
+    - cron: "0 */6 * * *"
 
 jobs:
-  build:
-    name: Jobs to update datas
+  generate:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     steps:
-      # Snake Animation
       - uses: Platane/snk@master
-  with:
-    github_user_name: platane
-    gif_out_path: dist/github-contribution-grid-snake.gif
-    svg_out_path: dist/github-contribution-grid-snake.svg
-
+        id: snake-gif
+        with:
+          github_user_name: platane
+          svg_out_path: dist/github-contribution-grid-snake.svg
 
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
           target_branch: output
           build_dir: dist
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN_GH_PAGES }}
